fixed overlaped forms, css should be a bit better now

--- a/MedicalApp/static/styles.css
+++ b/MedicalApp/static/styles.css
@@ -69,8 +69,8 @@ body, html {
 }
 
 .avatar {
-    width: 52x;
-    height: 52px;
+    max-width: 100px; 
+    max-height: 100px;
     border-radius: 50%;
     cursor: pointer;
 }
@@ -306,3 +306,96 @@ button
 {
     grid-column: 1/3; 
 }
+
+#changepasswordform {
+    display: block;
+    width: 300px;  
+    margin: 50px auto;  
+    padding: 20px;  
+    border: 1px solid #ccc;  
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);  
+    background-color: #f9f9f9;
+}
+
+#changepasswordform input[type="password"],
+#changepasswordform input[type="submit"] {
+    width: 100%;  
+    padding: 8px; 
+    margin: 8px 0;  
+    box-sizing: border-box; 
+    border: 1px solid #ddd; 
+    border-radius: 4px;  
+}
+
+#changepasswordform label {
+    display: block; 
+    margin-bottom: 5px; 
+    color: #333; 
+    font-weight: bold;  
+}
+
+#changepasswordform input[type="submit"] {
+    background-color: #4CAF50;  
+    color: white;  
+    cursor: pointer;  
+    border: none; 
+}
+
+#changepasswordform input[type="submit"]:hover {
+    background-color: #45a049; 
+}
+
+
+.updateavatar {
+    display: block; 
+    margin: 20px auto; 
+    text-align: center; 
+}
+
+img.updateavatar {
+    border-radius: 50%; 
+    border: 2px solid #ccc; 
+    padding: 5px; 
+    max-width: 100px; 
+    max-height: 100px; 
+}
+
+form.updateavatar {
+    width: 90%; 
+    max-width: 300px; 
+    padding: 20px; 
+    border: 1px solid #ccc; 
+    background-color: #f8f8f8;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+}
+
+form.updateavatar label {
+    font-weight: bold; 
+    color: #333; 
+}
+
+form.updateavatar input,
+form.updateavatar button {
+    width: 100%;
+    padding: 8px; 
+    margin-top: 10px; 
+    box-sizing: border-box; 
+    border-radius: 4px; 
+}
+
+form.updateavatar input[type="submit"] {
+    background-color: #4CAF50; 
+    color: white; 
+    border: none;
+    cursor: pointer; 
+}
+
+form.updateavatar input[type="submit"]:hover {
+    background-color: #45a049; 
+}
+
+p a:hover {
+    text-decoration: underline; 
+}
+
+
